# monprof

./: Cargo.toml  LICENSE.txt  README.md
monprof/: Cargo.toml
monprof/src/: cli.rs  main.rs
monproflib/: Cargo.toml
monproflib/src/: lib.rs
monproflib/src/error/: error_code.rs  mod.rs  monprof_error.rs
monproflib/src/monitor/: mod.rs  monitor.rs  sysfs.rs
monproflib/src/monitor/edid/: mod.rs
