[package]
name = "monprof"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
monproflib = {"path" = "../monproflib"}
clap = { version = "4.4.8", features = ["derive"] }
log.workspace = true
env_logger = "0.11.2"
